[package]
name = "blueprint-snapshot-averager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
log = "0.4.21"
num_cpus = "1.16.0"
rayon = "1.10.0"
serde = { version="1.0.202", features=["derive"] }

[build-dependencies]
prost-build = "0.12.4"
